3.3.1
 - docs: added some clarifications in the model docs
3.3.0
 - feat: introduce new NaniteFitModel class
 - ref: deprecated get_anc_parms in favor of compute_anc_parms
 - docs: add more information on how to write own model functions
3.2.1
 - enh: more sensible default parameters for POC estimation fits
3.2.0
 - feat: allow specifying the minimizer method for fitting (#21)
 - feat: new contact point estimation with linear fit for baseline
   and polynomial fit for indentation part
 - feat: new contact point estimation with Fréchet distance between
   curve and direct path in normalized coordinates
 - tests: rename experimental test data files according to
   afmformats scheme (#20)
3.1.4
 - docs: preprocessing methods not correctly rendered
3.1.3
 - fix: make sure that AFM metadata contain the spring constant and
   raise a MissingMetaDataError if this is not the case
 - ref: deprecate `IndentationPreprocessor` class in favor of a more
   flat submodule (#17)
3.1.2
 - docs: add POC table to docs
3.1.1
 - fix: do not modify preprocessing options when applying them (create
   a copy of the dictionary)
 - ref: remove `Indentation.reset` in favor of `AFMData.reset_data`
3.1.0
 - feat: new contact point estimation method "fit_constant_polynomial"
   which applies a piece-wise constant and polynomial fit
 - feat: contact point estimation methods now return detailed
   information about the procedure (currently plottable data to
   understand the process)
 - fix: spatial smoothing not working in some cases (#15)
 - enh: add `steps_optional` in preprocessing to allow fine-grained
   control about order of application
 - ref: remove "...smoothed" column data (which was never used anyway);
   instead, apply smoothing directly to AFMData subclass
 - ref: rename `require_steps` to `steps_required` in preprocessing
   decorator
 - setup: bump afmformats from 0.16.0 to 0.16.4
3.0.0
 - BREAKING CHANGE: The contact point estimation method "scheme_2020"